--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ html,
 body {
   margin: 0;
   font-family: "Source Sans Pro", sans-serif;
+  overflow-x: hidden;
 }
 
 * {
